# spade-api

./: .env  Cargo.toml
src/: lib.rs  main.rs
src/auth/: error.rs  handlers.rs  mod.rs  mutations.rs  queries.rs
src/auth/models/: auth.rs  email.rs  jwt.rs  mod.rs  password.rs
src/auth/types/: auth.rs  email.rs  error.rs  jwt.rs  mod.rs  password.rs
src/community/: error.rs  mod.rs  mutations.rs  queries.rs
src/community/models/: expression_post.rs  mod.rs  reply.rs  user_profile.rs
src/db/: auth.rs  auth.schema.sql  community.schema.sql  mod.rs
