[package]
name = "spade_api"
authors = ["Donte Littlejohn", "@aerymis"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
argon2 = "0.5.3"
async-graphql = { version = "7.0.3", features = ["chrono"] }
async-graphql-axum = "7.0.3"
axum = { version = "0.7.4" }
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
fancy-regex = "0.13.0"
futures = "0.3.30"
headers = "0.4.0"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors"] }
ulid = { version = "1.1.2", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
